fixed travis ci

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@
 .classpath
 .project
 /.settings
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
