--- a/build.xml
+++ b/build.xml
@@ -22,4 +22,7 @@
         <java jar="bin/jar/Server.jar" fork="true"/>
     </target>
 
+    <target name="test">
+	<echo message = "This part should be updated later."/>
+    </target>
 </project>
